--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "uuid": "^3.2.1",
     "webpack-dev-server": "^2.11.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.0.0-beta.38",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.1",
