--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "json": "concurrently \"json-server --watch db.json\" \"yarn start\""
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
@@ -39,6 +40,8 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "json-server": "^0.12.1",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0"
   }
