--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
+    "dotenv": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
     "path": "^0.12.7",
@@ -20,7 +21,9 @@
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "semantic-ui": "^2.2.14",
     "uuid": "^3.2.1",
     "webpack-dev-server": "^2.11.1"
   },
